--- a/lib/site/styles.css
+++ b/lib/site/styles.css
@@ -87,6 +87,11 @@ a:active {
   height: 315px;
   width: 560px;
 }
+
+#updated_at_template {
+  font-size: .8em;
+}
+
 .credits {
   font-size: 15px;
   font-style: italic;
@@ -103,5 +108,8 @@ a:active {
   }
   .wrapper iframe {
     width: 100%;
+  }
+  #updated_at_template {
+    font-size: 1em;
   }
 }
